cot/tests/snapshots/migrations/cot__db__migrations__tests__migration_engine_rollback_includes_dependent_apps-2.snap
---
source: cot/src/db/migrations.rs
expression: rollback_output
---
[1m[95mRolling Back[0m Migration rollback_dependent::m_0001_initial
[1m[35m Rolled Back[0m Migration rollback_dependent::m_0001_initial
[1m[95mRolling Back[0m Migration rollback_app1::m_0002_second
[1m[35m Rolled Back[0m Migration rollback_app1::m_0002_second
