cot/tests/snapshots/migrations/cot__db__migrations__tests__migration_engine_rollback_zero.snap
---
source: cot/src/db/migrations.rs
expression: snapshot_text
---
Rollback dry run

Target:
  app:       rollback_app1
  migration: zero
  mode:      zero (all migrations in app rolled back)

Rollback plan:
  1. rollback_app1::m_0003_third
  2. rollback_app1::m_0002_second
  3. rollback_app1::m_0001_initial

Summary:
  to roll back:     3
  skipped:          0
  database changes: none
