cot/tests/snapshots/migrations/cot__db__migrations__tests__migration_rollback_unrelated_apps.snap
---
source: cot/src/db/migrations.rs
expression: snapshot_text
---
Rollback dry run

Target:
  app:       rollback_app1
  migration: 0001
  mode:      exclusive (target migration remains applied)

Rollback plan:
  1. rollback_app1::m_0002_second

Summary:
  to roll back:     1
  skipped:          0
  database changes: none
